[package]
name = "sysctlexplorer"
version = "0.1.0"
authors = ["Johannes Lundberg <johalun0@gmail.com>"]
edition = "2018"

[dependencies]
cursive_tree_view = "^0.4"
simplelog = "^0.6.0"
lazy_static = "^1.3.0"
log = "^0.4.6"
sysctl = "^0.4.0"

[dependencies.cursive]
version = "^0.12"
default-features = false
features = ["termion-backend"]
